--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="row justify-content-center">
         
         <div class="col-md-8">
-            <h4 class="mb--3 text center">List siswa</h4>
+            <h4 class="mb--3 text">List siswa</h4>
             <input type="text" id="filter" class="form-control form-control-lg shadow-none" placeholder="cari siswa ...">
 
             <div class="table-responsive">
@@ -38,7 +38,6 @@
     </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <script src="index.js"></script>
 </body>
 </html>
